test_src/compiler_errors/types/binary/OrBoolError1.b
class OrBoolError1 {
    void test() {
        println(true | 1);
    }
}
